package com.peppayi.designpattern.headfirst.chapters.chapter02;

public interface Observer {

    void update(double temperature, double humidity, double pressure);
}
